<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">		GriERP		</string>
    <string name="action_settings">	Settings	</string>
    <string name="hello_world">		Hello world!</string>
	<string name="logon">			Logon		</string>
	<string name="logoning">		Logoning    </string>
	<string name="username">		name		</string>
	<string name="password">		pwd			</string>
	<string name="company">			comp		</string>
	<string name="back">			back		</string>
	<string name="logout">			logout		</string>
	<string name="quit">			quit		</string>
	<string name="receipt">			receipt		</string>
	<string name="module">			module		</string>
	<string name="switch_language"> simplified chinese</string>
	<string name="begin_scan">scan</string>
	<string name="stop_scan">stop</string>
	<string name="zdr">zdr</string>
	<string name="tm">Barcode</string>
	<string name="zldh">billNo</string>	
	<string name="ph">itemNum</string>
	<string name="pm">name</string>
	<string name="pih">lotNum</string>
	<string name="krks">capacity</string>
	<string name="krkf">krkf</string>
	<string name="num">num</string>
	<string name="factoryNo">Factoryno</string>
	<string name="dw">dw</string>	
	<string name="menu">menu</string>
	<string name="id">id</string>
	<string name="clear">clear</string>
	<string name="save">save</string>
	<string name="zrk">total</string>
	<string name="krk">capacit-y</string>
	<string name="reset_server">reset server</string>
	<string name="server1">server1</string>
	<string name="server2">server2</string>
	<string name="sh">Audit Management</string>
	<string name="zl">Quality Management</string>
	<string name="sc">Production management</string>
	<string name="ck">Warehouse Management</string>
	<string name="rs">Personnel Management</string>
	<string name="jh">Plan Management</string>
	<string name="kf">Service Management</string>
	<string name="curComp">company</string>
	<string name="rec_rksjd">check in</string>	
	<string name="rec_zljy">quality check</string>
	<string name="rec_scrb">production daily report</string>
	<string name="zldh_length">length of billNo</string>
		<string name="confirm">confirm</string>
	<string name="first_check">first check</string>
	<string name="process_check">process check</string>
	<string name="next">next</string>
	<string name="scsl">production quantities</string>
	<string name="scslf">production quantities(vice)</string>
	<string name="ywgs">finished quantities</string>
	<string name="ygdh">Staff Code</string>
	<string name="ygxm">Employee Name</string>
	<string name="cancel">cancel</string>
	<string name="xmmc"> Project Name </string> 
	<string name="cz"> disposal </string> 
	<string name="bhgyy"> reason failed </string> 
	<string name="bhgsl"> number of failed </string> 
	<string name="jyl"> test volume </string> 
	<string name="bz"> Notes </string>
	<string name="inputzldh">input billNo</string>
	<string name="cont">continue</string>
	<string name="show_all">show all</string>
	<string name="new_daily_prod_record">new daily production record</string>
	<string name="tgdh">Notice No.</string>
	<string name="wwgsl">Unfinished number</string>
	<string name="zc">Process</string>
	<string name="wgsl">Finished number</string>
	<string name="new_record">new</string>
</resources>
