<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/tv_headbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bar_bg"
            android:gravity="center"
            android:text="@string/rec_zljy"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_confirm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
     					android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/menu_btn_selector"
            android:layout_marginRight="5dp"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/cancel" />

    </RelativeLayout>


<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/ygdh" />

            <EditText
                android:id="@+id/et_ygdh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="false"
                android:ems="10" >

                
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/ygxm" />

            <EditText
                android:id="@+id/et_ygxm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="false"
                android:ems="10" >

                
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/xmmc" />

            <Spinner
                android:id="@+id/sp_xmmc"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"  />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/cz" />

            <Spinner
                android:id="@+id/sp_cz"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"  />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/bhgyy" />

            <Spinner
                android:id="@+id/sp_bhgyy"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"  />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/bhgsl" />

            <EditText
                android:id="@+id/et_bhgsl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="true"
                android:inputType="numberDecimal"
                android:ems="10" >

                
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/jyl" />

            <EditText
                android:id="@+id/et_jyl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="false"
                android:ems="10" >

                
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" 
            android:layout_margin="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="fill_parent"
                android:text="@string/bz" />

            <EditText
                android:id="@+id/et_bz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="true"
                android:ems="10" >

                
            </EditText>

        </LinearLayout>
        </LinearLayout>
</LinearLayout>
