<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<RelativeLayout
    android:layout_height="50dp"
    android:layout_width="fill_parent"
    
    android:id="@+id/bar">
    <TextView
        android:id="@+id/receipt_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/bar_bg"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/rec_rksjd" />

	<Button
	    android:id="@+id/btn_back_1"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="35dp"
	    android:layout_alignBaseline="@+id/btn_begin_scan"
	    android:layout_alignBottom="@+id/btn_begin_scan"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="5dp"
	    android:background="@drawable/btn_back_selector"
	    android:gravity="center"
	    android:text="@string/back"
	    android:textColor="#ffffff" />

	<Button
	    android:id="@+id/btn_begin_scan"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="35dp"
	    android:layout_alignParentRight="true"
	    android:layout_centerVertical="true"
	    android:layout_marginRight="5dp"
	    android:background="@drawable/begin_scan_selector"
	    android:text="@string/begin_scan"
	    android:textColor="#ffffff" />

	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_below="@+id/bar"
	    android:id="@+id/title"
	    >
	    <LinearLayout
	        android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:orientation="horizontal"
	        >
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:layout_weight="0.15"
	            android:text="@string/zldh"/>
	        <EditText 
	            android:layout_width="30dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.35"
	            android:textSize="12sp"
	            android:id="@+id/zldh"
	            android:editable="false"
	            />
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:layout_weight="0.15"
	            android:text="@string/num"/>
	        <EditText 
	            android:layout_width="30dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.35"
	            android:id="@+id/num"
	            android:editable="false"
	            />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:orientation="horizontal"
	        >
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:layout_weight="0.15"
	            android:text="@string/zrk"/>
	        <EditText 
	            android:layout_width="30dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.35"
	            android:id="@+id/zrk"
	            android:editable="false"
	            />
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:layout_weight="0.15"
	            android:text="@string/krk"/>
	        <EditText 
	            android:layout_width="30dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.35"
	            android:id="@+id/krk"
	            android:editable="false"
	            />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:orientation="horizontal"
	        >
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            
	            android:layout_weight="0.15"
	            android:text="@string/tm"/>
	        <EditText 
	            android:layout_width="30dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.85"
	            android:id="@+id/tm"
	            android:editable="false"
	            />
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/title"
	    android:id="@+id/record_title"
	    android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/id" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/tm" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/num" />
	</LinearLayout>
	<ListView
        android:id="@+id/lv_record"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
        android:layout_below="@+id/record_title"
        android:layout_alignParentLeft="true" >

    </ListView>
	
</RelativeLayout>
